fix: update to numerical spacing scale

--- a/src/css/components/alert.css
+++ b/src/css/components/alert.css
@@ -74,6 +74,6 @@ sl-alert {
   max-height: 100%;
 
   & sl-alert::part(base) {
-    margin: var(--cs-space-m);
+    margin: var(--cs-space-x4);
   }
 }
