--- a/src/css/spacing.css
+++ b/src/css/spacing.css
@@ -1,12 +1,12 @@
 :root, :host {
-  --sl-spacing-3x-small: var(--cs-space-xxs);
-  --sl-spacing-2x-small: var(--cs-space-xxs);
-  --sl-spacing-x-small: var(--cs-space-xxs);
-  --sl-spacing-small: var(--cs-space-xs);
-  --sl-spacing-medium: var(--cs-space-s);
-  --sl-spacing-large: var(--cs-space-m);
-  --sl-spacing-x-large: var(--cs-space-l);
-  --sl-spacing-2x-large: var(--cs-space-xl);
-  --sl-spacing-3x-large: var(--cs-space-2xl);
-  --sl-spacing-4x-large: var(--cs-space-3xl);
+  --sl-spacing-3x-small: var(--cs-space-x1);
+  --sl-spacing-2x-small: var(--cs-space-x1);
+  --sl-spacing-x-small: var(--cs-space-x1);
+  --sl-spacing-small: var(--cs-space-x2);
+  --sl-spacing-medium: var(--cs-space-x3);
+  --sl-spacing-large: var(--cs-space-x4);
+  --sl-spacing-x-large: var(--cs-space-x5);
+  --sl-spacing-2x-large: var(--cs-space-x6);
+  --sl-spacing-3x-large: var(--cs-space-x8);
+  --sl-spacing-4x-large: var(--cs-space-x10);
 }
